# sdv_simulation

./: .gitignore  Cargo.toml  README.md
crates/common/: Cargo.toml
crates/common/src/: domain_types.rs  lib.rs  signals.rs  transition_sink.rs  vehicle_constants.rs  virtual_car.rs  virtual_car_actor.rs
crates/common/src/digital_twin/: car_behaviour_checker.rs  mod.rs
crates/common/src/engine/: mod.rs
crates/common/src/engine/connectors/: physical_to_digital.rs
crates/common/src/engine/context/: mod.rs  vehicle_context.rs
crates/common/src/engine/controller/: actuation_contract.rs  actuation_manager.rs  mod.rs  vehicle_controller.rs  virtual_car_actor.rs
crates/common/src/engine/op_strategy/: mod.rs  transition_map.rs
crates/common/src/fsm/: engine.rs  machineries.rs  mod.rs  step.rs
crates/common/src/test/: actor_contract.rs  controller_api_contract.rs  engine_namespace_contract.rs  fsm.rs  fsm_engine_contract.rs  fsm_properties.rs  fsm_proptest.rs  fsm_step_contract.rs  lighting_step_contract.rs  mod.rs  op_strategy_contract.rs  projection_contract.rs  scenario_test.rs  scenarios_smoke.rs
crates/emulator/: Cargo.toml
crates/emulator/src/: car_physics.rs  main.rs
crates/emulator/src/models/: ambient_road_light.rs  config.rs  mod.rs  rpm.rs  speed.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: actuation_scaffold.rs  corner_light_actuation_can.rs  gateway_runtime.rs  ingress_bus.rs  main.rs
crates/gateway/src/codec/: kinds.rs  mod.rs  (+1 more)
crates/gateway/tests/: corner_lights_bus_e2e.rs  corner_lights_e2e.rs
docs/: rpm-model-tutorial.md
(+10 files in other folders)
