[package]
name = "common"
version = "0.1.0"
edition = "2024"

[features]
default = []
## Property-based FSM tests (`fsm::property_tests`). Enable with:
## `cargo test -p common --features proptest`
proptest = ["dep:proptest"]

[dependencies]
async-trait = "0.1.89"
proptest = { version = "1.8.0", optional = true }
rand = "0.10.0"
ractor = { version = "0.15.12", features = ["async-trait"] }
serde = { version = "1.0.228", features = ["derive"] }
socketcan = "3.5.0"
tokio = { version = "=1.48.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
time = { version = "0.3", features = ["formatting", "macros"] }
